VPC、tutorial-test-serverのリファクタリング

--- a/lib/aws-cfn/stack/network/.env
+++ b/lib/aws-cfn/stack/network/.env
@@ -2,8 +2,8 @@
 
 AWS_REGION=ap-northeast-1
 AWS_SAM_DOCKER_IMAGE=amazon/aws-cli
-APP_NAME=tutorial-test-server
-RESOURCE_PERMISSION=CAPABILITY_NAMED_IAM
+APP_NAME=network
+RESOURCE_PERMISSION=CAPABILITY_IAM
 
 COMPANY_PREFIX=ar
 PJ_PREFIX=demo
