--- a/lib/aws-sam/package.json
+++ b/lib/aws-sam/package.json
@@ -14,6 +14,7 @@
     "npm": "6.14.5"
   },
   "devDependencies": {
+    "dateformat": "^3.0.3",
     "gulp": "^4.0.2",
     "log4js": "^6.3.0",
     "minimist": "^1.2.5",
