--- a/lib/aws-cfn/stack/network/.env
+++ b/lib/aws-cfn/stack/network/.env
@@ -1,9 +1,36 @@
 # .env
 
-AWS_REGION=ap-northeast-1
-AWS_SAM_DOCKER_IMAGE=amazon/aws-cli
-APP_NAME=network
+# stack実行に必要な権限
+#
+# description:
+# テンプレートに定義内容によって切り替える。
+#
 RESOURCE_PERMISSION=CAPABILITY_IAM
 
-COMPANY_PREFIX=ar
-PJ_PREFIX=demo
+# stackを実行するリージョン
+#
+# description:
+# 基本固定値。
+#
+AWS_REGION=ap-northeast-1
+
+# コマンドのdockerイメージ
+#
+# description:
+# 基本固定値。
+#
+AWS_CLI_DOCKER_IMAGE=amazon/aws-cli
+
+# テンプレートファイル
+#
+# description:
+# 基本固定値。
+#
+TEMPLATE_FILE=template.yaml
+
+# 設定ファイル
+#
+# description:
+# デプロイ先によって切り替える。
+#
+PARAMETER_FILE=demo.json
