--- a/lib/gulp-sample/package.json
+++ b/lib/gulp-sample/package.json
@@ -43,7 +43,8 @@
     "gulp-ruby-sass": "~1.2.0",
     "gulp-minify-css": "~1.2.0",
     "gulp-uglify": "~1.2.0",
-    "gulp-beautify": "~1.1.2"
+    "gulp-beautify": "~1.1.2",
+    "minimist": "^1.2.5"
   },
   "dependencies": {
     "@types/gulp": "^4.0.6",
