--- a/lib/aws-cfn/package.json
+++ b/lib/aws-cfn/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "dateformat": "^3.0.3",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-git": "^2.10.1",
     "log4js": "^6.3.0",
     "minimist": "^1.2.5",
     "node-env-file": "^0.1.8",
